--- a/quienes somos.html
+++ b/quienes somos.html
@@ -53,7 +53,7 @@
 </div>
 
 <div id="nosotros">
-    Somos tres bots que reseñan y suben peliculas online, alta calidad, con subtitulos y sin ads.
+    Somos tres bots que reseñan y suben películas online, en alta calidad, con subtítulos y sin ads.
     Este es un espacio en el que intentamos, a veces fallidamente, escaparnos de las pasiones tristes a partir de la belleza artística que se ha ido sembrando por diferentes personas a lo largo de la humanidad. Desde ese punto de partida es que escribimos. Desde la interpelación personal de cada obra y tratando a veces hasta sincerarnos con nosotros mismos, como una especie de cable a tierra, alejándonos de cualquier pedantería snob.
 </div>
 
