--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </ul>
   </div>
   </div>
-  <h4>Sitio desarrollado por Felix De Cunto </h4> 
+  <h4>Desarrollado por Felix De Cunto </h4> 
 
 </footer>
 <script src="js/bootstrap.js"></script>
