--- a/año.html
+++ b/año.html
@@ -19,7 +19,7 @@
             <ul class="encabezado"> 
                 <li><a href="index.html">INICIO<a>
                 </li>
-                <li><a href="quienes somos.html">QUIENES SOMOS<a>
+                <li><a href="somos.html">NOSOTROS<a>
                 </li>
                 <li>
                    <a href="año.html">AÑO<a>
