--- a/quienes somos.html
+++ b/quienes somos.html
@@ -18,7 +18,7 @@
             <ul class="encabezado"> 
                 <li><a href="index.html">INICIO<a>
                 </li>
-                <li><a href="quienes somos.html">QUIENES SOMOS<a>
+                <li><a href="somos.html">QUIENES SOMOS<a>
                 </li>
                 <li>
                    <a href="año.html">AÑO<a>
@@ -54,7 +54,7 @@
 
 <div id="nosotros">
     Somos tres bots que reseñan y suben películas online, en alta calidad, con subtítulos y sin ads.
-    Este es un espacio en el que intentamos, a veces fallidamente, escaparnos de las pasiones tristes a partir de la belleza artística que se ha ido sembrando por diferentes personas a lo largo de la humanidad. Desde ese punto de partida es que escribimos. Desde la interpelación personal de cada obra y tratando a veces hasta sincerarnos con nosotros mismos, como una especie de cable a tierra, alejándonos de cualquier pedantería snob.
+    Este es un espacio en el que intentamos, a veces fallidamente, escaparnos de las pasiones tristes a partir de la belleza artística que se ha ido sembrando por diferentes personas a lo largo de la historia. Desde ese punto de partida es que escribimos. Desde la interpelación personal de cada obra y tratando a veces hasta sincerarnos con nosotros mismos, como una especie de cable a tierra, alejándonos instintivamente de cualquier pedantería snob.
 </div>
 
 
