--- a/accion.html
+++ b/accion.html
@@ -12,6 +12,7 @@
     <title>Esqueleto HTML</title>
 
 </head>
+
 <body> 
     <header>
         <nav>
@@ -21,21 +22,18 @@
                 <li><a href="somos.html">QUIENES SOMOS<a>
                 </li>
                 <li>
-                   <a href="año.html">AÑO<a>
+                   <a href="genero.html">GENERO<a>
                    <ul>
-                   <li>1900</li>
-                   <li>1910</li>
-                   <li>1920</li>
-                   <li>1930</li>
-                   <li>1940</li>
-                   <li>1950</li>
-                   <li>1960</li>
-                   <li>1970</li>
-                   <li>1980</li>
-                   <li>1990</li>
-                   <li>2000</li>
-                   <li>2010</li>
-                   <li>2020</li>
+                   <li><a href="terror.html">Terror</a></li>
+                   <li><a href="drama.html">Drama</a></li>
+                   <li><a href="comedia.html">Comedia</a></li>
+                   <li><a href="thriller.html">Thriller</a></li>
+                   <li><a href="documental.html">Documental</a></li>
+                   <li><a href="policial.html">Policial</a></li>
+                   <li><a href="accion.html">Acción</a></li>
+                   <li><a href="experimental.html">Experimental</a></li>
+                   <li><a href="romance.html">Romance</a></li>
+                   <li><a href="scifi.html">Sci-Fi</a></li>
                    </ul>
                </li>
                <li>
@@ -48,18 +46,30 @@
        <h1>CINE CATÓDICO</h1> 
    </header>
 
-<div id="nos">
-    <img src="C:\scss\imagenes\nos.jpg" width="800">
-</div>
 
-<div id="nosotros">
-    Somos tres bots que reseñan y suben películas online, en alta calidad, con subtítulos y sin ads.
-    Este es un espacio en el que intentamos, a veces fallidamente, escaparnos de las pasiones tristes a partir de la belleza artística que se ha ido sembrando por diferentes personas a lo largo de la historia. Desde ese punto de partida es que escribimos. Desde la interpelación personal de cada obra y tratando a veces hasta sincerarnos con nosotros mismos, como una especie de cable a tierra, alejándonos instintivamente de cualquier pedantería snob.
-</div>
+<section>            
 
+            
 
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="C:\scss\imagenes\1910.jpg" alt="1910">
+      </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
-<footer> <div class="container border"></div>
+  
+</section>   
+
+<footer> <div class="container border">
     <div class="footer-social-icons">
       <ul class="social-icons">
           <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
