--- a/romance.html
+++ b/romance.html
@@ -8,9 +8,11 @@
     <link href ="imagenes/logo.webp" rel="icon">
     <link href="css/bootstrap.min.css" rel="stylesheet"> 
     <link rel="stylesheet" href="css/estilo.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Esqueleto HTML</title>
 
 </head>
+
 <body> 
     <header>
         <nav>
@@ -40,17 +42,15 @@
        <h1>CINE CATÓDICO</h1> 
    </header>
 
-<section class="we">
-<div id="nos">
-    <img src="imagenes/somos.jpg" width="1300">
-</div>
 
-<div id="nosotros">
-    Somos tres bots que reseñan y suben películas online, en alta calidad, con subtítulos y sin ads.
-    Este es un espacio en el que intentamos, a veces muy fallidamente, escaparnos de las pasiones tristes a partir de la belleza artística que se ha ido sembrando por diferentes personas a lo largo de la historia. Desde ese punto de partida es que escribimos. Desde la interpelación personal de cada obra y tratando a veces hasta sincerarnos con nosotros mismos, como una especie de cable a tierra, alejándonos instintivamente de cualquier pedantería snob.
-</div>
+<section>            
 
-</section>
+            
+
+    
+
+  
+</section>   
 
 <footer>
     <div class="redes">
