--- a/drama.html
+++ b/drama.html
@@ -30,6 +30,7 @@
                    <li><a href="thriller.html">Thriller</a></li>
                    <li><a href="romance.html">Romance</a></li>
                    <li><a href="scifi.html">Sci-Fi</a></li>
+                   <li><a href="docus.html">Docus</a></li>
                    </ul>
                </li>
                <li>
@@ -42,14 +43,57 @@
        <h1>CINE CATÓDICO</h1> 
    </header>
 
-
 <section>            
 
-            
+    <p class="gen">Drama</p>
 
+<hr>
 
-  
-</section>   
+<main class="pelis">
+    <section class="contenedorPadre">
+        <div class="componentes">
+            <img src="imagenes/wendyandlicy.jpg" width="250">
+            <li class="pelicula"> <a href="https://ok.ru/video/3433370618451" target="_blank" class="links">
+                <p class="movie">WENDY & LUCY</p></a>Kelly Reichardt | Estados Unidos | 80min | 2008</li>
+        </div> 
+        <div class="componentes">
+            <img src="imagenes/criacuervos.jpg" width="250">
+            <li class="pelicula"> <a href="https://ok.ru/video/3433370618451" target="_blank" class="links"> 
+                <p class="movie">CRÍA CUERVOS</p></a>Carlos Saura | España | 110 min | 1976</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/winterlight.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3476603734611" target="_blank" class="links">
+                <p class="movie">WINTER LIGHT</p></a>Ingmar Bergman | Suecia | 80min | 1962</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/dragon.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3399721749075" target="_blank" class="links">
+                <p class="movie">GOODBYE DRAGON INN</p></a>Tsai Ming Liang | Taiwán | 82min | 2003</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/buffallo66.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3196542454355" target="_blank" class="links">
+                <p class="movie">BUFFALLO 66</p></a>Vincent Gallo | USA | 110 min | 1998 </li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/pixote.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/2855956974163" target="_blank" class="links">
+                <p class="movie">PIXOTE</p></a>Héctor Babenco | Brasil | 128 min | 1981</li>
+        </div> 
+        <div class="componentes">
+            <img src="imagenes/fiveeasypieces.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3145978874451" target="_blank" class="links">
+                <p class="movie">FIVE EASY PIECES</p></a>Bob Rafelson | Estados Unidos | 98 min | 1970</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/krisha.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3300397353555" target="_blank" class="links">
+                <p class="movie">KRISHA</p></a>Trey Edward Shults | Estados Unidos | 81 min | 2015</li>
+        </div>           
+    </section>   
+</main>
+</section> 
 
 <footer>
     <div class="redes">
@@ -57,13 +101,13 @@
         <ul class="social-icons"> 
             <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
             <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-            <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.instagram.com/cinecatodico/" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
         </ul>
     </div>
     </div>
     <p class="diseñador">Desarrollado por Felix De Cunto </p> 
-  
   </footer>
+  
   <script src="js/bootstrap.js"></script>
   </body>
   </html>
