--- a/genero.html
+++ b/genero.html
@@ -30,6 +30,7 @@
                    <li><a href="thriller.html">Thriller</a></li>
                    <li><a href="romance.html">Romance</a></li>
                    <li><a href="scifi.html">Sci-Fi</a></li>
+                   <li><a href="docus.html">Docus</a></li>
                    </ul>
                </li>
                <li>
@@ -45,42 +46,48 @@
 
 <section>            
     <div id="carouselExampleControls" class="carousel" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="imagenes/terror.jpg" width="500" height="550" alt="First slide">
+        <div class="carousel-inner" >
+          <div class="carousel-item active"> 
+            <img class="mx-auto d-block w-100 img-fluid" src="imagenes/canibalismo.jpg" width="500" height="550" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
-                <h5>TERROR</h5>
-              </div>
+                <h5><a href="terror.html">TERROR</a></h5>
+            </div>
           </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="imagenes/drama.png" width="500" height="550" alt="Second slide">
+        <div class="carousel-item">
+            <img class="mx-auto d-block w-100 img-fluid" src="imagenes/dramon.jpg" width="500" height="550" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
-                <h5>DRAMA</h5>
-              </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="imagenes/comedia.jpg" width="500" height="550" alt="Third slide">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>COMEDIA</h5>
+                <h5><a href="drama.html">DRAMA</a></h5>
             </div>
         </div>
         <div class="carousel-item">
-        <img class="d-block w-100" src="imagenes/thriller.jpg" width="500" height="550" alt="Third slide">
+            <img class="mx-auto d-block w-100 img-fluid" src="imagenes/comedia.jpeg" width="500" height="550" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
-                <h5>THRILLER</h5>
+                <h5><a href="comedia.html">COMEDIA</a></h5>
+            </div>
         </div>
-    </div>
-    <div class="carousel-item">
-        <img class="d-block w-100" src="imagenes/romance.jpg" width="500" height="550" alt="Third slide">
+        <div class="carousel-item">
+        <img class="mx-auto d-block w-100 img-fluid" src="imagenes/thriller.jpg" width="500" height="550" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
-                <h5>ROMANCE</h5>
+                <h5><a href="thriller.html">THRILLER</a></h5>
+            </div>
         </div>
-    </div>
-    <div class="carousel-item">
-        <img class="d-block w-100" src="imagenes/sci-fi.jpg" width="500" height="550" alt="Third slide">
+        <div class="carousel-item">
+            <img class="mx-auto d-block w-100 img-fluid" src="imagenes/romance.jpg" width="500" height="550" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
-                <h5>SCI-FI</h5>
+                <h5><a href="romance.html">ROMANCE</a></h5>
+            </div>
         </div>
+        <div class="carousel-item">
+        <img class="mx-auto d-block w-100 img-fluid" src="imagenes/scifi.jpg" width="500" height="550" alt="Third slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5><a href="scifi.html">SCI-FI</a></h5>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="mx-auto d-block w-100 img-fluid" src="imagenes/docus.jpg" width="500" height="550" alt="Third slide">
+            <div class="carousel-caption d-none d-md-block">
+          <h5><a href="docus.html">DOCUS</a></h5>
+            </div>
         </div>
 
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -94,6 +101,7 @@
             <span class="carousel-control-next-icon"></span>
           </a>
       </div>
+
     
 
   
@@ -105,12 +113,11 @@
         <ul class="social-icons"> 
             <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
             <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-            <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.instagram.com/cinecatodico/" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
         </ul>
     </div>
     </div>
     <p class="diseñador">Desarrollado por Felix De Cunto </p> 
-  
   </footer>
   <script src="js/bootstrap.js"></script>
   </body>
