--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                    <li><a href="thriller.html">Thriller</a></li>
                    <li><a href="romance.html">Romance</a></li>
                    <li><a href="scifi.html">Sci-Fi</a></li>
+                   <li><a href="docus.html">Docus</a></li>
                    </ul>
                </li>
                <li>
@@ -43,26 +44,126 @@
 <main class="pelis">
     <section class="contenedorPadre">
         <div class="componentes">
-            <img src="imagenes/FEHER.jpg" width="250">
-            <li class="pelicula"> Marcell Jankovics | Hungría | 81min | 1981</li>
+            <img src="imagenes/wendyandlicy.jpg" width="250">
+            <li class="pelicula"> <a href="https://ok.ru/video/3433370618451" target="_blank" class="links">
+                <p class="movie">WENDY & LUCY</p></a>Kelly Reichardt | Estados Unidos | 80min | 2008</li>
         </div>
         <div class="componentes">
-            <img src="imagenes/wendyandlicy.jpg" width="250">
-            <li class="pelicula"> Kelly Reichardt | Estados Unidos | 80min | 2008</li></div>
-        <div class="componentes">
-            <img src="imagenes/winterlight.jpg" width="250" >
-            <li class="pelicula">Ingmar Bergman | Suecia | 80min | 1962</li></div>
+            <img src="imagenes/winterlight.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3476603734611" target="_blank" class="links">
+                <p class="movie">WINTER LIGHT</p></a>Ingmar Bergman | Suecia | 80min | 1962</li>
+        </div>
         <div class="componentes">
             <img src="imagenes/greysgarden.jpg" width="250">
-            <li class="pelicula">David Maysles & Albert Maysles | Estados Unidos | 95min | 1975</li></div>
+            <li class="pelicula"><a href="https://ok.ru/video/3000440261203" target="_blank" class="links">
+                <p class="movie">GREYS GARDEN</p></a>David Maysles & Albert Maysles | Estados Unidos | 95min | 1975</li>
+        </div>
         <div class="componentes">
             <img src="imagenes/dragon.jpg" width="250">
-            <li class="pelicula">Tsai Ming Liang | Taiwán | 82min | 2003</li></div>
+            <li class="pelicula"><a href="https://ok.ru/video/3399721749075" target="_blank" class="links">
+                <p class="movie">GOODBYE DRAGON INN</p></a>Tsai Ming Liang | Taiwán | 82min | 2003</li>
+        </div>
         <div class="componentes">
-            <img src="imagenes/pociag.jpg" width="250">
-            <li class="pelicula">Jerzy Kawalerowicz | Polonia | 97min | 1959</li></div>  
-    </div>
-</section>
+            <img src="imagenes/criacuervos.jpg" width="250">
+            <li class="pelicula"> <a href="https://ok.ru/video/3433370618451" target="_blank" class="links"> 
+                <p class="movie">CRÍA CUERVOS</p></a>Carlos Saura | España | 110 min | 1976</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/der todesking.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3370998762067" target="_blank" class="links">
+                <p class="movie">DER TODESKING</p></a> Jörg Buttgereit | Alemania | 80 min | 1990</li>
+        </div>   
+        <div class="componentes">
+            <img src="imagenes/lawrence.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3521946323539" target="_blank" class="links">
+                <p class="movie">MERRY CHRISTMAS MR. LAWRENCE</p></a>Nagisa Ōshima | Japón | 124 min | 1983</li>
+        </div> 
+        <div class="componentes">
+            <img src="imagenes/belly.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/2716137359955" target="_blank" class="links">
+                <p class="movie">BELLY</p></a>Hype Williams | EEUU | 92 min | 1998</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/wakeinfright.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3196542454355" target="_blank" class="links">
+                <p class="movie">WAKE IN FRIGHT</p></a>Ted Kotcheff | Australia | 114 min | 1971</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/buffallo66.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3196542454355" target="_blank" class="links">
+                <p class="movie">BUFFALLO 66</p></a>Vincent Gallo | USA | 110 min | 1998 </li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/lastdayshere.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/2823565806163" target="_blank" class="links">
+                <p class="movie">LAST DAYS HERE</p></a>Don Argon | Demian Fenton | 91 min | USA | 2011</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/killingamerica.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/2862483966547" target="_blank" class="links">
+                <p class="movie">THE KILLING OF AMERICA</p></a>Leonard Schrader & Sheldon Renan | Estados Unidos | 90 min | 1981</li>
+        </div> 
+        <div class="componentes">
+            <img src="imagenes/pixote.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/2855956974163" target="_blank" class="links">
+                <p class="movie">PIXOTE</p></a>Héctor Babenco | Brasil | 128 min | 1981</li>
+        </div> 
+        <div class="componentes">
+            <img src="imagenes/walkabout.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3101975579219" target="_blank" class="links">
+                <p class="movie">WALKABOUT</p></a>Nicolas Roeg | Australia | 100 min | 1971</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/fiveeasypieces.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3145978874451" target="_blank" class="links">
+                <p class="movie">FIVE EASY PIECES</p></a>Bob Rafelson | Estados Unidos | 98 min | 1970</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/makingsense.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3196542454355" target="_blank" class="links">
+                <p class="movie">STOP MAKING SENSE</p></a>Jonathan Demme | 1984 | EEUU | 88 min</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/ceremonia.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3175021021779" target="_blank" class="links">
+                <p class="movie">LA CEREMONIE</p></a>Claude Chabrol | Francia | 111 min | 1995</li> 
+        </div>
+        <div class="componentes">
+            <img src="imagenes/krisha.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3300397353555" target="_blank" class="links">
+                <p class="movie">KRISHA</p></a>Trey Edward Shults | Estados Unidos | 81 min | 2015</li>
+        </div>
+        <div class="componentes">
+           <img src="imagenes/sick.jpg" width="250"></a>
+            <li class="pelicula"><a href="https://ok.ru/video/3354699106899" target="_blank" class="links">
+            <p class="movie">SICK: LIFE AND DEATH OF BOB FALANAGAN</p></a>Kirby Dick | Estados Unidos | 90 min | 1997</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/valkoinen.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3319764552275" target="_blank" class="links">
+                <p class="movie">VALKOINEN PEURA</p></a>Erik Blomberg | Finlandia | 74 min | 1952</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/guerra.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3413759887955" target="_blank" class="links">
+                <p class="movie">LA GUERRE DU FEU</p></a>Jean-Jacques Annaud | Francia | 100 min | 1981</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/strangedays.jpeg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3216119106131" target="_blank" class="links">
+                <p class="movie">STRANGE DAYS</p></a> Kathryn Bigelow | Estados Unidos | 145 min | 1995 </li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/decoder.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3194027575891" target="_blank" class="links">
+                <p class="movie">DECODER</p></a>Muscha | Alemania | 87 min | 1984 </li> 
+        </div>
+        <div class="componentes">
+            <img src="imagenes/heathers.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3047440321107" target="_blank" class="links">
+                <p class="movie">HEATHERS</p></a>Michael Lehmann | Estados Unidos | 103 min | 1988</li>
+        </div>
+    </section>
 </main>
 
 <div class="row"><nav aria-label="navbar">
@@ -78,21 +179,21 @@
 </div>
 
 
-<footer>
+
   
 
-  <div class="redes">
-    <div class="footer-social-icons" >
-      <ul class="social-icons"> 
-          <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-          <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-          <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
-      </ul>
-  </div>
-  </div>
-  <p class="diseñador">Desarrollado por Felix De Cunto </p> 
-
-</footer>
+    <footer>
+        <div class="redes">
+          <div class="footer-social-icons" >
+            <ul class="social-icons"> 
+                <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+                <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://www.instagram.com/cinecatodico/" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+            </ul>
+        </div>
+        </div>
+        <p class="diseñador">Desarrollado por Felix De Cunto </p> 
+      </footer>
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
