--- a/terror.html
+++ b/terror.html
@@ -30,6 +30,7 @@
                    <li><a href="thriller.html">Thriller</a></li>
                    <li><a href="romance.html">Romance</a></li>
                    <li><a href="scifi.html">Sci-Fi</a></li>
+                   <li><a href="docus.html">Docus</a></li>
                    </ul>
                </li>
                <li>
@@ -45,6 +46,25 @@
 
 <section>            
 
+
+<p class="gen">Terror</p>
+
+<hr>
+
+<main class="pelis">
+    <section class="contenedorPadre">
+        <div class="componentes">
+            <img src="imagenes/der todesking.jpg" width="255">
+            <li class="pelicula"><a href="https://ok.ru/video/3370998762067" target="_blank" class="links">
+            <p class="movie">DER TODESKING</p></a> Jörg Buttgereit | Alemania | 80 min | 1990</li>
+        </div> 
+        <div class="componentes">
+            <img src="imagenes/valkoinen.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3319764552275" target="_blank" class="links">
+            <p class="movie">VALKOINEN PEURA</p></a>Erik Blomberg | Finlandia | 74 min | 1952</li>
+        </div>
+    </section>
+</main>
   
 </section> 
   
@@ -54,13 +74,13 @@
         <ul class="social-icons"> 
             <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
             <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-            <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.instagram.com/cinecatodico/" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
         </ul>
     </div>
     </div>
     <p class="diseñador">Desarrollado por Felix De Cunto </p> 
-  
   </footer>
+
   <script src="js/bootstrap.js"></script>
   </body>
   </html>
