--- a/thriller.html
+++ b/thriller.html
@@ -30,6 +30,7 @@
                    <li><a href="thriller.html">Thriller</a></li>
                    <li><a href="romance.html">Romance</a></li>
                    <li><a href="scifi.html">Sci-Fi</a></li>
+                   <li><a href="docus.html">Docus</a></li>
                    </ul>
                </li>
                <li>
@@ -45,9 +46,39 @@
 
 <section>            
 
-            
+<p class="gen">Thriller</p>
 
-  
+<hr>
+
+    <main class="pelis">
+        <section class="contenedorPadre">
+        <div class="componentes">
+            <img src="imagenes/criacuervos.jpg" width="250">
+            <li class="pelicula"> <a href="https://ok.ru/video/3433370618451" target="_blank" class="links"> 
+                <p class="movie">CRÍA CUERVOS</p></a>Carlos Saura | España | 110 min | 1976</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/belly.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/2716137359955" target="_blank" class="links">
+                <p class="movie">BELLY</p></a>Hype Williams | EEUU | 92 min | 1998</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/wakeinfright.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3196542454355" target="_blank" class="links">
+                <p class="movie">WAKE IN FRIGHT</p></a>Ted Kotcheff | Australia | 114 min | 1971</li>
+        </div>
+        <div class="componentes">
+            <img src="imagenes/ceremonia.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3175021021779" target="_blank" class="links">
+                <p class="movie">LA CEREMONIE</p></a>Claude Chabrol | Francia | 111 min | 1995</li> 
+        </div>
+        <div class="componentes">
+            <img src="imagenes/krisha.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3300397353555" target="_blank" class="links">
+                <p class="movie">KRISHA</p></a>Trey Edward Shults | Estados Unidos | 81 min | 2015</li>
+        </div>
+        </section>
+    </main>
 </section>   
 
 <footer>
@@ -56,13 +87,13 @@
         <ul class="social-icons"> 
             <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
             <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-            <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.instagram.com/cinecatodico/" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
         </ul>
     </div>
     </div>
     <p class="diseñador">Desarrollado por Felix De Cunto </p> 
-  
   </footer>
+  
   <script src="js/bootstrap.js"></script>
   </body>
   </html>
