--- a/comedia.html
+++ b/comedia.html
@@ -30,6 +30,7 @@
                    <li><a href="thriller.html">Thriller</a></li>
                    <li><a href="romance.html">Romance</a></li>
                    <li><a href="scifi.html">Sci-Fi</a></li>
+                   <li><a href="docus.html">Docus</a></li>
                    </ul>
                </li>
                <li>
@@ -42,14 +43,25 @@
        <h1>CINE CATÓDICO</h1> 
    </header>
 
+<section> 
+    <p class="gen">Comedia</p>
 
-<section>            
-
-            
-
-
-  
-</section>   
+<hr>
+    <main class="pelis">
+        <section class="contenedorPadre">
+            <div class="componentes">
+                <img src="imagenes/buffallo66.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3196542454355" target="_blank" class="links">
+                <p class="movie">BUFFALLO 66</p></a>Vincent Gallo | USA | 110 min | 1998 </li>
+        </div>
+            <div class="componentes">
+                <img src="imagenes/heathers.jpg" width="250">
+            <li class="pelicula"><a href="https://ok.ru/video/3047440321107" target="_blank" class="links">
+                <p class="movie">HEATHERS</p></a>Michael Lehmann | Estados Unidos | 103 min | 1988</li>
+        </div>
+        </section>
+    </main>
+</section>
 
 <footer>
     <div class="redes">
@@ -57,13 +69,13 @@
         <ul class="social-icons"> 
             <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
             <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-            <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.instagram.com/cinecatodico/" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
         </ul>
     </div>
     </div>
     <p class="diseñador">Desarrollado por Felix De Cunto </p> 
-  
   </footer>
+  
   <script src="js/bootstrap.js"></script>
   </body>
   </html>
