--- a/somos.html
+++ b/somos.html
@@ -28,6 +28,7 @@
                    <li><a href="thriller.html">Thriller</a></li>
                    <li><a href="romance.html">Romance</a></li>
                    <li><a href="scifi.html">Sci-Fi</a></li>
+                   <li><a href="docus.html">Docus</a></li>
                    </ul>
                </li>
                <li>
@@ -39,7 +40,6 @@
        </nav>
        <h1>CINE CATÓDICO</h1> 
    </header>
-
 <section class="we">
 <div id="nos">
     <img src="imagenes/somos.jpg" width="1300">
@@ -58,13 +58,13 @@
         <ul class="social-icons"> 
             <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
             <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-            <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.instagram.com/cinecatodico/" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
         </ul>
     </div>
     </div>
     <p class="diseñador">Desarrollado por Felix De Cunto </p> 
-  
   </footer>
+  
   <script src="js/bootstrap.js"></script>
   </body>
   </html>
